added design using tailwind css

--- a/style.css
+++ b/style.css
@@ -33,21 +33,21 @@ label {
     color: #555;
 }
 
-input[type="text"],
+/* input[type="text"],
 input[type="number"] {
     width: 100%;
     padding: 6px;
     border: 1px solid #ccc;
     border-radius: 6px;
     transition: border-color 0.3s;
-}
+} */
 
-input[type="text"]:focus,
+/* input[type="text"]:focus,
 input[type="number"]:focus {
     border-color: #007bff;
-}
+} */
 
-button[type="submit"] {
+/* button[type="submit"] {
     background-color: #007bff;
     color: #fff;
     border: none;
@@ -55,11 +55,11 @@ button[type="submit"] {
     border-radius: 6px;
     cursor: pointer;
     transition: background-color 0.3s;
-}
+} */
 
-button[type="submit"]:hover {
+/* button[type="submit"]:hover {
     background-color: #0056b3;
-}
+} */
 
 #displayInfo {
     margin-top: 8px;
@@ -89,11 +89,11 @@ body {
 }
 
 /* Heading styles */
-h1, h2 {
+/* h1, h2 {
     text-align: center;
     margin-bottom: 10px;
     color: #007bff;
-}
+} */
 
 /* Form styling */
 form {
@@ -115,10 +115,10 @@ input[type="number"] {
     transition: border-color 0.3s;
 }
 
-input[type="file"],
+/* input[type="file"],
 button {
     margin-top: 10px;
-}
+} */
 
 button {
     background-color: #007bff;
